# robot_nav

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: base_contorller.pc  pr2_moveit_generated.pc  rob_control.pc  robot_arm_config.pc  robot_arm_interface.pc
devel/lib/rob_control/: rob_control
src/base_controller/: CMakeLists.txt
src/base_controller/launch/: .base_controller.launch.swp  base_controller.launch  start.sh
src/base_controller/scripts/: .img_recognition_pup.py.swp  .speed_pup.py.swp  img_recognition_pup.py  motor_controller.py  socket_server.py  speed_pup.py
src/img_odom/: CMakeLists.txt  package.xml
src/img_odom/scripts/: img_test.py
src/pr2_moveit_generated/: .setup_assistant  package.xml
src/pr2_moveit_generated/config/: kinematics.yaml  ompl_planning.yaml  pr2.srdf  ros_controllers.yaml
src/pr2_moveit_generated/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  moveit.rviz  planning_context.launch  pr2_moveit_controller_manager.launch.xml  ros_controllers.launch
src/rob_control/launch/: rob_control.launch
src/rob_control/scripts/: .arm_controller.py.swp  SerialCmd.py  \  arm_controller.py  arm_controller_backup.py  backup_arm_controller.py  joint_log.txt  joints.py  mult_thread.py  position_records.txt  server_cmd.py  sock_svr.py  teach_position.txt  test.py
src/rob_control/src/: rob_control.cpp
src/robot_arm/: CMakeLists.txt  package.xml  urdf.rviz
src/robot_arm/include/rob_control/: rob_comm.h  rob_control.h
src/robot_arm/launch/: display.launch  gazebo.launch  joint_states.launch
src/robot_arm/meshes/: base_link.STL  frame_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
src/robot_arm/src/: rob_comm.cpp  rob_control.cpp
src/robot_arm/urdf/: backup_robot_arm.urdf  robot_arm.urdf  urdf  urdf_wrobot_param_note.txt
src/robot_arm_config/: .setup_assistant
src/robot_arm_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot_arm.srdf
src/robot_arm_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo.launch.xml  demo_gazebo.launch  (+14 more)
src/robot_arm_interface/: CMakeLists.txt  package.xml
(+13 files in other folders)
