<?xml version = "1.0"?>
<package format = "2">
  <name>robot_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for robot_arm robot</p>
  </description>
  <author>me</author>
  <maintainer email="biaoyuan_shu@163.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
